syntax = "proto3";
package nitric.proto.batch.v1;

// protoc plugin options for code generation
option go_package = "github.com/nitrictech/nitric/core/pkg/proto/batch/v1;batchpb";
option java_package = "io.nitric.proto.batch.v1";
option java_multiple_files = true;
option java_outer_classname = "BatchService";
option php_namespace = "Nitric\\Proto\\Batch\\V1";
option csharp_namespace = "Nitric.Proto.Batch.v1";

// Service for scheduling callbacks on a cadence
service Batch {
  rpc CreateJob(CreateJobRequest) returns (CreateJobResponse);
}

// ClientMessages are sent from the service to the nitric server
message CreateJobRequest {
    string name = 1;
}

message CreateJobResponse {
}
